force-app/main/default/objects/Account/fields/Grade_Level__c.field-meta.xml
<CustomField>
    <fullName>Grade_Level__c</fullName>
    <label>Grade Level</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kindergarten</fullName>
            </value>
            <value>
                <fullName>1st Grade</fullName>
            </value>
            <value>
                <fullName>2nd Grade</fullName>
            </value>
            <value>
                <fullName>3rd Grade</fullName>
            </value>
            <value>
                <fullName>4th Grade</fullName>
            </value>
            <value>
                <fullName>5th Grade</fullName>
            </value>
            <value>
                <fullName>6th Grade</fullName>
            </value>
            <value>
                <fullName>7th Grade</fullName>
            </value>
            <value>
                <fullName>8th Grade</fullName>
            </value>
            <value>
                <fullName>High School</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>