force-app/main/default/objects/Account/fields/Questions_Phone_Best_Call_Time__c.field-meta.xml
<CustomField>
    <fullName>Questions_Phone_Best_Call_Time__c</fullName>
    <label>Questions? Phone &amp; Best Call Time</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>