force-app/main/default/objects/Account/fields/Required_Materials__c.field-meta.xml
<CustomField>
    <fullName>Required_Materials__c</fullName>
    <label>Required Materials</label>
    <type>TextArea</type>
</CustomField>