force-app/main/default/objects/Account/fields/Sample_Address_No_PO_Box__c.field-meta.xml
<CustomField>
    <fullName>Sample_Address_No_PO_Box__c</fullName>
    <label>Sample Address (No PO Box)</label>
    <type>TextArea</type>
</CustomField>