force-app/main/default/objects/Account/fields/Subject_Area__c.field-meta.xml
<CustomField>
    <fullName>Subject_Area__c</fullName>
    <label>Subject Area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Math</fullName>
            </value>
            <value>
                <fullName>Science</fullName>
            </value>
            <value>
                <fullName>ELA</fullName>
            </value>
            <value>
                <fullName>Social Studies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>