force-app/main/default/objects/Account/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mailed Preview Workbook (7-10 business days)</fullName>
            </value>
            <value>
                <fullName>eBook Trial (1 business day)</fullName>
            </value>
            <value>
                <fullName>Both!</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>