force-app/main/default/objects/Account/fields/Would_you_like_a_quote__c.field-meta.xml
<CustomField>
    <fullName>Would_you_like_a_quote__c</fullName>
    <label>Would you like a quote?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>